added notebook from workshop (this time for real)

--- a/titanic/Titanic.ipynb
+++ b/titanic/Titanic.ipynb
@@ -4,41 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Installation Basics\n",
+    "## Titanic Dataset\n",
     "\n",
-    "Get [Anaconda](https://anaconda.org/)  \n",
-    "https://anaconda.org/\n",
-    "\n",
-    "make sure that everything is up to date:  \n",
-    "`conda update conda`  \n",
-    "`conda update --all`\n",
-    "\n",
-    "add pydotplus:  \n",
-    "`conda install -c conda-forge pydotplus`\n",
-    "\n",
-    "Start jupyter notebook:  \n",
-    "In a terminal type  \n",
-    "`jupyter notebook`\n",
-    "\n",
-    "## First Data\n",
-    "A great place to find all kinds of publicly available data and Machine Learning techniques applied to them is kaggle:  \n",
-    "https://www.kaggle.com/\n",
-    "\n",
-    "As a gentle introduction to Data Science we'll start by trying to predict who survived the sinking of the Titanic:  \n",
     "https://www.kaggle.com/c/titanic\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import some packages first\n",
@@ -73,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# load train and test data into pandas DataFrames\n",
@@ -456,7 +434,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Unfortunately, way too many cabin numbers are missing\n",
@@ -1264,7 +1244,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = train.drop('Name', axis=1)"
@@ -1560,7 +1542,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# filter by title\n",
@@ -1746,7 +1730,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# most passengers boarded in Southampton, so we'll just fill the two missing values with 'S'\n",
@@ -2017,7 +2003,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = train.drop('Ticket', axis=1)"
@@ -2506,7 +2494,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# create the various dummy variables\n",
@@ -3064,7 +3054,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "all_X = train[features]\n",
@@ -3097,7 +3089,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# as a first example consider a simple logistic regression\n",
@@ -3210,7 +3204,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# next example: decision tree\n",
@@ -3419,37 +3415,6 @@
     "\n",
     "feat.plot(kind='barh', figsize=(25, 25))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# next steps\n",
-    "# Random Forest\n",
-    "# Gradient Boosting\n",
-    "# Support Vector Machine\n",
-    "# Ada Boost\n",
-    "# Gaussian Naive Bayes\n",
-    "# Quadratic Discriminant Analysis\n",
-    "\n",
-    "# Voting Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -3468,7 +3433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
